fix social media icon spacing

--- a/css/ipl.css
+++ b/css/ipl.css
@@ -74,6 +74,7 @@ header:hover nav a span, header:hover .sidebar-socials a span {
 
 .battlefy-link {
     margin-bottom: 2px !important;
+    margin-top: -13px !important;
 }
 
 img.sidebar-icon {
